--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/Screen Shot 2020-11-24 at 4.56.02 PM.png" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/webdesign.png" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <a href="https://github.com/nsuroghon/Daily-Planner/tree/master"><div class="portfolio-caption-heading">Work Day Planner</div></a>
-                                <div class="portfolio-caption-subheading text-muted">Javascript practice</div>
+                                <a href="https://github.com/aspivak5/Web-design-challenge"><div class="portfolio-caption-heading">Web Visualization Dashboard </div></a>
+                                <div class="portfolio-caption-subheading text-muted">Web Design Challenge</div>
                             </div>
                         </div>
                     </div>
@@ -134,11 +134,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/Screen Shot 2020-11-24 at 4.56.49 PM.png" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/7-animated-scatter.gif" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <a href="https://github.com/nsuroghon/Password-Generator-Webpage/tree/master"><div class="portfolio-caption-heading">Password Generator</div></a>
-                                <div class="portfolio-caption-subheading text-muted">Javascript practice</div>
+                                <a href=https://github.com/aspivak5/D3-Challenge><div class="portfolio-caption-heading"> Data Journalism and D3</div></a>
+                                <div class="portfolio-caption-subheading text-muted">D3 Challenge</div>
                             </div>
                         </div>
                     </div>
@@ -148,25 +148,25 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/Screen Shot 2021-02-04 at 2.31.06 PM.png" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/erd.png" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <a href="https://github.com/dazrin/Group5-Project-2"><div class="portfolio-caption-heading">UofT Project 2</div></a>
-                                <div class="portfolio-caption-subheading text-muted">Reddit Clone</div>
+                                <a href="https://github.com/aspivak5/SQL-challenge"><div class="portfolio-caption-heading">SQL Database</div></a>
+                                <div class="portfolio-caption-subheading text-muted">SQL Challenge</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/python.png" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <a href="https://github.com/aspivak5/Python-Challenge"><div class="portfolio-caption-heading">Python</div>
+                                <div class="portfolio-caption-subheading text-muted">Python-Challenge</div>
                             </div>
                         </div>
                     </div>
@@ -178,27 +178,27 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">My Journey</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/western.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2016-2020</h4>
                                 <h4 class="subheading">Western University</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted"> Recieved a bachelors degree from the University of Western Ontario  with honors specialization in Kinesiology. Was on the deans honour list from 2017-2020</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/uoft.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2020-2021</h4>
                                 <h4 class="subheading">University Of Toronto</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">In the process of earning a certificate in Data Analytics and Visualization from the University of Toronto Data Analytics Bootcamp.Gained skills in Excel, HTML, Python, Pandas, SQL, NOSQL, JS, Tableau and R</p></div>
                         </div>
                     </li>
                     <li>
@@ -240,17 +240,17 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Me</h2>
-                    <h3 class="section-subheading text-muted"><a href="https://github.com/nsuroghon">View My Projects.</a></h3>
+                    <h3 class="section-subheading text-muted"><a href="https://github.com/aspivak5">View My Projects.</a></h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="" alt="" />
-                            <h4>Niv Suroghon</h4>
-                            <p class="text-muted">Student Developer</p>
+                            <img class="mx-auto rounded-circle" src="assets/img/about/me.png" alt="" />
+                            <h4>Aaron Spivak</h4>
+                            <p class="text-muted">Data Analysts</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/aaron-spivak-564110205/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
